convertedToMDAPI/objects/AccountConnection__c.object
<CustomObject>
    <description>Links multiple accounts together for instance Collection Site to APH Site</description>
    <label>Account Connection</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Connection #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Connections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>AccountFrom__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Connections</relationshipLabel>
        <relationshipName>ConnectionsTo</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AccountTo__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Connection</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Connections (To)</relationshipLabel>
        <relationshipName>ConnectionsFrom</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SharingCalculationStatus__c</fullName>
        <description>Status of the sharing recalculation</description>
        <inlineHelpText>Status of the sharing recalculation</inlineHelpText>
        <label>Sharing Calculation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TransitOffset__c</fullName>
        <description>Value of the Transit Time (in hours)</description>
        <inlineHelpText>Value of the Transit Time (in hours)</inlineHelpText>
        <label>Transit Offset</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Specifies the type of the connection</description>
        <inlineHelpText>Specifies the type of the connection</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Goods Supplier</fullName>
                </value>
                <value>
                    <fullName>Primary Vendor</fullName>
                </value>
                <value>
                    <fullName>Ship-To</fullName>
                </value>
                <value>
                    <fullName>Collection Centre</fullName>
                </value>
                <value>
                    <fullName>Infusion Centre</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>